@@ -1,6 +1,7 @@
 v1.0.4(2024.XX.XX)
 - Update settings to modern format
 - Add a way to clean subtitles cache
+- Change way to handle special episode number
 
 v1.0.3(2024.04.11)
 - Update Basic Auth
